--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f88216e
-	base = eaba7a8
-	trim = 
-	trimbase = 
+	base = 36cdba2
+	trim = flir_ptu_driver
+	trimbase = eaba7a8
