--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f88216e
-	base = 3c0f7e2
-	trim = 
-	trimbase = 
+	base = 8c18007
+	trim = flir_ptu_description
+	trimbase = 3c0f7e2
