--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f88216e
-	base = e54ec41
-	trim = 
-	trimbase = 
+	base = c551cd2
+	trim = flir_ptu_viz
+	trimbase = e54ec41
