--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/flir_ptu_driver
-	previous = 
-	base = 36cdba2
+	previous = 36cdba2
+	base = ea066cc
 	trim = 
 	trimbase = 
