--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/flir_ptu_driver
-	previous = 
-	base = 7b0f319
+	previous = 7b0f319
+	base = 98d44a9
 	trim = 
 	trimbase = 
