--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/flir_ptu_viz
-	previous = 
-	base = c551cd2
+	previous = c551cd2
+	base = 5fc52f2
 	trim = 
 	trimbase = 
