--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/flir_ptu_viz
-	previous = 
-	base = a2a9dc4
+	previous = a2a9dc4
+	base = 536a336
 	trim = 
 	trimbase = 
