--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/flir_ptu_description
-	previous = 
-	base = 8c18007
+	previous = 8c18007
+	base = 2253268
 	trim = 
 	trimbase = 
