--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/flir_ptu_description
-	previous = 
-	base = 1ea48b1
+	previous = 1ea48b1
+	base = a8e868c
 	trim = 
 	trimbase = 
