--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d4d954a
-	base = 1aeca84
+	base = cb36588
 	trim = flir_ptu_driver
-	trimbase = 
+	trimbase = 1aeca84
