--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d4d954a
-	base = cd4bfb2
+	base = 607725c
 	trim = flir_ptu_description
-	trimbase = 
+	trimbase = cd4bfb2
