--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d4d954a
-	base = 9d262fc
+	base = 63f72bb
 	trim = flir_ptu_viz
-	trimbase = 
+	trimbase = 9d262fc
